intex.html has modified

--- a/intex.html
+++ b/intex.html
@@ -9,6 +9,7 @@
     <h1>HELLO</h1>
     <div class="">
         <h5>hello how are you?</h5>
+        <h3>hi how areee u</h3>
     </div>
 </body>
 </html>
