positive answer added

--- a/intex.html
+++ b/intex.html
@@ -11,5 +11,8 @@
         <h5>hello how are you?</h5>
         <h3>hi how areee u</h3>
     </div>
+    <div>
+        <h6>i can dou</h6>
+    </div>
 </body>
 </html>
